Fixed some errors on mobile sizes with margin css in skills section

--- a/css.css
+++ b/css.css
@@ -314,7 +314,10 @@ main {
 
   #skills-querry {
     flex-direction: column;
+    margin-top: 0px;
+    padding: 10%;
   }
+
 
   .skill-block {
     width: 100%;
@@ -401,6 +404,7 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     flex: 2;
+    padding-bottom: 10%;
   }
 
   .skill-block {
@@ -462,6 +466,7 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     flex: 1;
+    padding-bottom: 5%;
   }
 
   .skill-block {
